# ffridataset-scripts

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.measurement  LICENSE  Pipfile  README.md  dataset.py  main.py  pyproject.toml  test_dataset.py  test_main.py
dist_lief/: lief-0.11.0.ffridataset2020-cp36-none-linux_x86_64.whl  lief-0.12.0.dev0-cp38-cp38-linux_x86_64.whl
docker/: pyproject.toml
patches/: lief.patch
schema/: ffridataset2020.json  ffridataset_v2021.json  ffridataset_v2022.json  ffridataset_v2023.json  ffridataset_v2024.json
scripts/: create_measurement_env.py  create_test_files.py
testbin/: test.csv  test_die.json  test_die_nonpe.json  test_die_pe.json  test_hashes.json  test_hashes_nonpe.json  test_hashes_pe.json  test_lief.json  test_lief_pe.json  test_manalyze.json  test_manalyze_pe.json  test_peid.json  test_peid_pe.json  test_strings.json  test_strings_nonpe.json  test_strings_pe.json  test_trid.json  test_trid_pe.json
third-party-licenses/: LIEF
workspace/: pypeid-0.1.0-py3-none-any.whl  pypeid-0.1.2-py3-none-any.whl  pypeid-0.1.3-py3-none-any.whl
