[tool.poetry]
name = "ffridataset-scripts"
version = "v2022.1"
description = "This script makes datasets in the form of the FFRI dataset"
authors = ["Yuki Mogi", "Koh M. Nakagawa"]
license = "Apache-2"
readme = "README.md"
homepage = "https://github.com/FFRI/ffridataset-scripts"
repository = "https://github.com/FFRI/ffridataset-scripts"
include = ["LICENSE"]
keywords = ["Malware", "FFRI Dataset", "Machine Learning", "MWS/CSS"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pehash = {git = "https://github.com/knowmalware/pehash.git", develop = true, rev = "v0.9.1"}
ssdeep = "^3.4"
pefile = "^2021.9.3"
lief = "^0.12.2"
typer = "^0.4.1"
loguru = "^0.6.0"
pandas = "^1.4.1"
joblib = "^1.1.0"
py-tlsh = "^4.7.2"
pypeid = {path = "workspace/pypeid-0.1.0-py3-none-any.whl"}
pyimpfuzzy = "^0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pip-licenses = "^3.5.3"
isort = "^5.10.1"
snakeviz = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
